API Zugriff fuer Seriensuche

--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -14,13 +14,10 @@
         <%= form.label :releaseday  %>
         <%= form.text_field :releaseday %>
 
-        <%= form.label :rating  %>
-        <%= form.text_field :rating %>
-
         <%= form.label 'Link to series stream/download' %>
         <%= form.text_field :link %>
 
-        <%= form.submit :class => 'button expand'  %>
+        <%= form.submit :class => 'button tiny'  %>
 
     <% end %>
   </div>
