--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -4,6 +4,14 @@
   </div>
 </div>
 
+<% if current_user.role = 'admin' %>
+	<div class="row">
+		<div class="medium-10 medium-centered columns">
+			<%= link_to 'New news', new_news_path, :class => 'button tiny' %>
+	    </div>
+	</div>
+<% end%>
+
 <div class="row">
   <div class="medium-10 medium-centered columns">
 
@@ -18,3 +26,4 @@
     
   </div>
 </div>
+
