--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -17,7 +17,7 @@
         <%= form.label :password_confirmation %>
         <%= form.password_field :password_confirmation %>
 
-        <%= form.submit :class => 'button expand'%>
+        <%= form.submit :class => 'button tiny'%>
 
     <% end %>
   </div>
