--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -30,7 +30,7 @@
         <%= f.label :password_confirmation %>
         <%= f.password_field :password_confirmation %>
 
-        <%= f.submit :class => 'button expand'%>
+        <%= f.submit :class => 'button tiny'%>
 
     <% end %>
   </div>
