--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,22 +1,30 @@
 <div class="row">
   <div class="medium-10 medium-centered columns">
-    <h1>New entry for your list</h1>
+    <h1>Add a TV show manually</h1>
   </div>
 </div>
 
 <div class="row">
   <div class="medium-10 medium-centered columns">
     
-    <%= form_for @series do |form| %>
+    <%= form_for ([current_user, @entry]) do |form| %>
 
-        <%= form.label :name %>
-        <%= form.text_field :name %>
+        <%= form.label :title %>
+        <%= form.text_field :title %>
+
+        <%= form.label :lastepisode %>
+        <%= form.text_field :lastepisode %>
+
+        <%= form.label :lastseason %>
+        <%= form.text_field :lastseason %>
+
+        <%= form.label :releaseday %>
+        <%= form.text_field :releaseday %>
+
+        <%= form.label 'Link to the stream or download page' %>
+        <%= form.text_field :link %>
         
-        <div class="row">
-  			<div class="medium-4 medium-centered columns">
-  				<%= form.submit 'Search TV Show', :class => 'button expand' %>	
-  			</div>
-		</div>
+        <%= form.submit 'Add TV Show', :class => 'button tiny' %>
 
     <% end %>
     
