--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,6 +4,7 @@
   </div>
 </div>
 
+<% if !current_user.nil? %>
 <% if !@entries.nil? %>
 
     <div class="row">
@@ -26,8 +27,8 @@
           <thead>
           <tr>
             <th>Series Title</th>
-            <th>Last Episode</th>
-            <th>Last Season</th>
+            <th>Last Ep. Watched</th>
+            <th>Last Season Watched</th>
             <th>Weekday</th>
             <th>Rating</th>
           </tr>
@@ -37,10 +38,10 @@
           <% @entries.each do |entry| %>
               <tr>
                 <td><%= link_to entry.title, url_with_protocol(entry.link), :target => '_blank' %></td>
-                <td><%= entry.lastepisode %> <%= link_to '+', {:controller => 'entries' , :action => 'episode_up', :entry_id => entry.id} %>|
-                  <%= link_to '-', {:controller => 'entries' , :action => 'episode_down', :entry_id => entry.id} %></td>
-                <td><%= entry.lastseason %>  <%= link_to '+', {:controller => 'entries' , :action => 'season_up', :entry_id => entry.id} %>|
-                  <%= link_to '-', {:controller => 'entries' , :action => 'season_down', :entry_id => entry.id} %></td>
+                <td><%= entry.lastepisode %> <%= link_to '+', episode_up_path(:entry_id => entry.id) %>|
+                  <%= link_to '-', episode_down_path(:entry_id => entry.id) %></td>
+                <td><%= entry.lastseason %>  <%= link_to '+', season_up_path(:entry_id => entry.id) %>|
+                  <%= link_to '-', season_down_path(:entry_id => entry.id) %></td>
                 <td><%= entry.releaseday %></td>	
                 <td><%= link_to 'E', edit_user_entry_path(current_user, entry) %></td>
                 <td><%= link_to 'X', user_entry_path(current_user, entry), :method => :delete, data: { confirm: "Are you sure to delete this entry?" } %></td>
@@ -61,6 +62,7 @@
       </div>
     </div>
 
+<% end %>
 <% end %>
 
 
