Kalender zeigt jetzt alle Episoden der Serien an

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -3,6 +3,7 @@
 
 .calendar { width: 100%; }
 .calendar td { height: 50px; width: 14.28%; }
+.calendar-entry { font-size: 10px }
 .next-month, .prev-month { color: lightgray }
 .serieslist { width: 100%; }
 
