--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -10,6 +10,12 @@
 
         <%= form.label :title %>
         <%= form.text_field :title %>
+        
+        <%= form.label "Last episode watched" %>
+        <%= form.text_field :lastepisode %>
+        
+        <%= form.label "Last season watched" %>
+        <%= form.text_field :lastseason %>
 
         <%= form.label :releaseday  %>
         <%= form.text_field :releaseday %>
